--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -640,7 +640,7 @@ pre tt:after {
   text-align: center;
 }
 
-.article-wrapper {
+.article-contents {
   border-bottom: 1px solid rgb(238, 235, 241);
   padding: 12px;
 }
