--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -22,17 +22,14 @@ section,
 summary {
   display: block;
 }
-main {
-  margin-top: 130px;
-  margin-bottom: 130px;
+header {
+  width: 100%;
 }
 footer {
-  color: inherit;
-  background: #eeebf1;
-  width: 100%; /* 横の幅を100% */
-  position: fixed;
-  bottom: 0px; /* 絶対位置指定(左0px,下0px) */
-  padding: 10px 0; /* 上下に余白を取る */
+  margin: 0 auto;
+  max-width: 960px;
+  padding: 0 1.0875rem 3rem;
+  text-align: center;
 }
 audio,
 canvas,
@@ -632,11 +629,29 @@ pre tt:after {
   html {
     font-size: 100%;
   }
-  main {
-    margin-top: 100px;
-    margin-bottom: 100px;
-  }
 }
+
+.contents-wrapper {
+  margin: 0 auto;
+  max-width: 960px;
+  padding: 0 1.0875rem 10rem;
+}
+
+.header-content {
+  margin: 0 auto;
+  max-width: 960px;
+  padding: 3rem 1.0875rem;
+}
+
+.header-title {
+  margin: 0;
+}
+
+.header-link {
+  color: inherit;
+  text-decoration: none;
+}
+
 .text-align-center {
   text-align: center;
 }
