--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,5 +1,6 @@
 html {
-  font-family: sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
@@ -634,7 +635,7 @@ pre tt:after {
 .contents-wrapper {
   margin: 0 auto;
   max-width: 960px;
-  padding: 0 1.0875rem 10rem;
+  padding: 0.5rem 1.0875rem 5rem;
 }
 
 .header-content {
@@ -688,7 +689,7 @@ pre tt:after {
 }
 
 .post-page-wrapper {
-  padding: 1rem;
+  padding: 0 1rem;
 }
 
 .post-page-contents h2 {
