--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -27,10 +27,10 @@ header {
   width: 100%;
 }
 footer {
-  margin: 0 auto;
-  max-width: 960px;
-  padding: 0 1.0875rem 3rem;
+  padding: 2rem 3rem;
   text-align: center;
+  color: white;
+  background: coral;
 }
 audio,
 canvas,
@@ -651,6 +651,9 @@ pre tt:after {
 .header-link {
   color: inherit;
   text-decoration: none;
+  border-bottom: dotted coral 4px;
+  display: inline-block;
+  padding-bottom: 0.5rem;
 }
 
 .text-align-center {
