--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -450,11 +450,21 @@ blockquote {
   margin-left: 1.45rem;
   margin-right: 1.45rem;
   margin-top: 0;
-  padding-bottom: 0;
-  padding-left: 0;
+  padding-left: 1.45rem;
   padding-right: 0;
-  padding-top: 0;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
   margin-bottom: 1.45rem;
+  border-left: 5px solid #e3e3e3;
+  font-size: 0.85rem;
+}
+blockquote p {
+  font-style: italic;
+}
+blockquote cite {
+  display: block;
+  text-align: right;
+  margin-top: 0.5rem;
 }
 form {
   margin-left: 0;
