fix: 日付表示を日本時間に対応させた&表示形式を変えた

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -644,6 +644,10 @@ pre tt:after {
   }
 }
 
+time {
+  font-family: initial;
+}
+
 .contents-wrapper {
   display: flex;
   flex-direction: column;
