--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,6 +1,5 @@
 html {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
-    Arial, sans-serif;
+  font-family: "GFS Didot", serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
@@ -253,7 +252,7 @@ h1 {
 h2 {
   margin-left: 0;
   margin-right: 0;
-  margin-top: 0;
+  margin-top: 1.7rem;
   padding-bottom: 0;
   padding-left: 0;
   padding-right: 0;
@@ -270,7 +269,7 @@ h2 {
 h3 {
   margin-left: 0;
   margin-right: 0;
-  margin-top: 0;
+  margin-top: 0.5rem;
   padding-bottom: 0;
   padding-left: 0;
   padding-right: 0;
@@ -646,6 +645,7 @@ pre tt:after {
 
 time {
   font-family: initial;
+  font-size: 0.8em;
 }
 
 .contents-wrapper {
@@ -718,13 +718,24 @@ time {
   padding: 0 1rem;
 }
 
+.post-page-wrapper p,
+li {
+  font-size: 0.9em;
+}
+
+.post-page-wrapper time {
+  display: block;
+  text-align: end;
+  margin-bottom: 1rem;
+}
+
 .post-page-contents h2 {
   border-left: 5px solid coral;
   padding-left: 15px;
 }
 
 .post-page-contents h3 {
-  border-bottom: 2px solid coral;
+  border-bottom: 5px double coral;
   display: inline-block;
 }
 
